[package]
name = "simd_helpers"
version = "0.1.0"
authors = ["Luca Barbato <lu_zero@gentoo.org>"]
edition = "2018"
repository = "https://github.com/lu-zero/arg_enum_proc_macro"
readme = "README.md"
keywords = ["proc_macro", "simd"]
license = "MIT"

[lib]
proc-macro = true
test = false

[dependencies]
quote = "1.0.2"
